# xp

./: .coverage  .flake8  .gitignore  .homekit_cache.json  Architecture.md  Feature-Module-Type.md  Feature-Telegram-System-And-Reply.md  IMPLEMENTATION_SUMMARY.md  NOTICE.md  README.md  accessory.state  api.yml.example  cli-switch.sh  cli.yml  cli.yml.example  conbus.txt  conbus2.txt  config.yml  conson.yml  demo.py  discover.txt  export.yml  homekit.yml  homekit.yml.example  log.132  log.32  log.46  log.7  log.98  publish.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/agents/: conbus-protocol-migrator.md  migrate-actiontable-download-service.md  migrate-actiontable-upload-service.md  migrate-conbus-custom-service.md  (+8 more)
Specs/: Architecture.md  ConbusLog-discover.txt  Feat-Refactor-Cli.md  Feature-Action-Table.md  Feature-Blink-And-StopBlink.md  Feature-Blink-Unblink.md  Feature-Checksum.md  Feature-Conbus-Client-Send.md  Feature-Conbus-DataPoint-Code.md  Feature-Conbus-Emulator.md  Feature-Conbus-Results.md  Feature-Conbus-ReverseProxy.md  Feature-Conbus-Scan.md  Feature-Discover-System-And-Reply-Telegram.md  Feature-File-Decode-Telegrams.md  Feature-Module-Type.md  Feature-Move-Responsibilities-To-BaseServerService.md  Feature-Parse-Version.md  Feature-Server-MissingTypes.md  Feature-XP-Input.md  Feature-XP24-Action.md  Feature-XP33-Emulator-Spec.md  Fix-Encoding-Issue.md  MODULE_TYPE_IMPLEMENTATION.md
config/: conson.yml.example  homekit.yml.example  logging.yml.example  protocol.yml.example  rp.yml.example
dev/: extract_service_ctors.py  refactor_instructions.py  service_all.txt  service_ctor.txt  service_refactor.txt  service_refactor_agent1.txt  service_refactor_agent2.txt  service_refactor_agent3.txt  service_refactor_agent4.txt
doc/: Architecture.md  Chore-Remove-Cache.md  Coding.md  ConbusLog-discover.txt  ConbusLog.txt  Dependencies.dot  Feat-Blink-all.md  Feat-Bubus-Caching.md  Feat-Cache-Management.md  Feat-Click-Color.md  Feat-ClickType-SerialNumber.md  Feat-Conbus-AutoReportStatus.md  Feat-Conbus-Background-State-Sync.md  Feat-Conbus-LinkNumber-Get.md  Feat-Conbus-LinkNumber.md  Feat-Conbus-Raw-Telegram.md  Feat-Conbus-Receive-Events.md  Feat-Conbus-Request-Solution.md  Feat-Conbus-lightlevel.md  Feat-ConsonConnectionPool.md  Feat-Datapoint-All.md  Feat-Download-ActionTable.md  Feat-Download-MsActionTable.md  Feat-Download-XP24-ActionTable.md  Feat-Download-XP24-MsActionTable.md  Feat-Download-XP24-MsActionTable.pseudo.md  Feat-Download-Xp20-MsActionTable.md  Feat-Download-Xp33-MsActionTable.md  Feat-FastAPI-discover.md  Feat-HomeKit-Cache-Service-Background-Refresh.md  Feat-HomeKit-Cache-Service.md  Feat-HomeKit-Config-Validator.md  Feat-Move-Responsibilities-To-BaseServerService.md  Feat-Refactor-Cli.md  Feat-Refactor-TelegramService.md  Feat-XP-Output.md  Feature-Blink-Unblink.md  Feature-ClickType-Serial.md  Feature-ClickType-SerialNumber.md  Feature-Conbus-Client-Send.md  (+29 more)
docs/: Feat-Conbus-lightlevel.md  Feat-Download-XP24-MsActionTable.pseudo  conbus_protocol.md
scripts/: refactor_services_ioc.py  twistedbus.py
tests/: conftest.py
(+560 files in other folders)
